feat(client): implement responsibility in login screen

--- a/client/index.html
+++ b/client/index.html
@@ -12,17 +12,17 @@
     <h1 class="title-h1">Welcome to online Tamagotchi</h1>
     <form class="form-login mt-4">
         <div class="form-internal">
-            <div>
+            <div class="mb-3">
                 <label for="inputOwner" class="d-block">Who are you?</label>
                 <input id="inputOwner" type="text" class="input-tamagotchi d-block mt-2 pixel-border">
             </div>
 
-            <div>
+            <div class="mb-3">
                 <label for="inputCatIp" class="d-block">Where is your pet?</label>
                 <input id="inputCatIp" type="text" class="input-tamagotchi pixel-border d-block mt-2">
             </div>
         </div>
-        <button class="mt-3 margin-start-auto">Connect</button>
+        <button class="margin-start-auto">Connect</button>
     </form>
 </main>
 </body>
