--- a/client/index.html
+++ b/client/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="stylesheets/main.css">
 </head>
 <body class="bg-p0">
-
-<main class="pixel-border tamagotchi-screen">
+<main id="login-screen" class="pixel-border tamagotchi-screen">
     <h1 class="title-h1">Welcome to online Tamagotchi</h1>
     <form class="form-login mt-4">
         <div class="form-internal">
@@ -22,8 +21,41 @@
                 <input id="inputCatIp" type="text" class="input-tamagotchi pixel-border d-block mt-2">
             </div>
         </div>
-        <button class="margin-start-auto">Connect</button>
+        <button id="button-connect" class="margin-start-auto">Connect</button>
     </form>
 </main>
+
+<main id="tamagotchi-screen" class="pixel-border tamagotchi-screen">
+    <section class="cat-container">
+        <div>
+            <div class="cat-box pixel-border mb-2">
+                <img src="assets/cat-default.gif" alt="Cat image" class="image-fluid">
+            </div>
+            <div class="status">
+                <span class="status-bar pixel-border">
+                    <img src="assets/happy-icon.png" alt="Happy face icon" class="image-fluid">
+                </span>
+                <span class="status-bar pixel-border">
+                    <img src="assets/meal-icon.png" alt="Fish meal icon" class="image-fluid">
+                </span>
+                <span class="status-bar pixel-border">
+                    <img src="assets/energy-icon.png" alt="Energy thunder icon" class="image-fluid">
+                </span>
+            </div>
+        </div>
+        <div class="cat-actions">
+            <div class="chat pixel-border mb-2">
+                Chat
+            </div>
+            <div class="action-bar">
+                <button class="mt-2">Feed</button>
+                <button class="mt-2">Sleep</button>
+                <button class="mt-2">Play</button>
+                <button class="mt-2">Disconect</button>
+            </div>
+        </div>
+    </section>
+</main>
 </body>
+<script type="text/javascript" src="scripts/index.js"></script>
 </html>
