feat(client): implement communication with server

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -82,6 +82,7 @@
 </main>
 
 </body>
+<script type="text/javascript" src="scripts/service.js"></script>
 <script type="text/javascript" src="scripts/index.js"></script>
 <script type="text/javascript" src="scripts/sign-in.js"></script>
 </html>
