feat(client): create tamagotchi feature

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -65,6 +65,11 @@
     <form class="form-login mt-4">
         <div class="form-internal">
             <div class="mb-3">
+                <label for="inputSignUsername" class="d-block">What's your name?</label>
+                <input id="inputSignUsername" type="text" class="input-tamagotchi pixel-border d-block mt-2">
+            </div>
+
+            <div class="mb-3">
                 <label for="inputTamagotchiName" class="d-block">Give your pet a name!</label>
                 <input id="inputTamagotchiName" type="text" class="input-tamagotchi d-block mt-2 pixel-border">
             </div>
