refactor(client): encapsulate functions from index.js

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,14 +7,12 @@
     <link rel="stylesheet" href="stylesheets/main.css">
 </head>
 <body class="bg-p0">
-<template id="template-screen">
-
-</template>
-
 </body>
+
 <script type="text/javascript" src="scripts/components/LoginScreenComponent.js"></script>
 <script type="text/javascript" src="scripts/components/SingInScreenComponent.js"></script>
 <script type="text/javascript" src="scripts/components/TamagotchiScreen.js"></script>
-<script type="text/javascript" src="scripts/service.js"></script>
-<script type="text/javascript" src="scripts/index.js"></script>
+<script type="text/javascript" src="scripts/controllers/service.js"></script>
+<script type="text/javascript" src="scripts/controllers/navigation-utils.js"></script>
+<script type="text/javascript" src="scripts/controllers/event-handler.js"></script>
 </html>
