refactor(client): adjust communication with server

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-p0">
 </body>
-
+<script type="text/javascript" src="scripts/utils/LocalstorageUtils.js"></script>
 <script type="text/javascript" src="scripts/components/LoginScreenComponent.js"></script>
 <script type="text/javascript" src="scripts/components/SingInScreenComponent.js"></script>
 <script type="text/javascript" src="scripts/components/TamagotchiScreen.js"></script>
