style(client): add favicon

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,7 @@
     <title>Tamagotchi Online</title>
     <link rel="stylesheet" href="stylesheets/default.css">
     <link rel="stylesheet" href="stylesheets/main.css">
+    <link rel="icon" type="image/x-icon" href="/assets/icons/icon-cat.ico">
 </head>
 <body class="bg-p0">
 </body>
